--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .wrap{
       max-width: 980px;
       margin: 0 auto;
-      padding: 56px 18px 40px;
+      padding: 42px 16px 34px;
     }
 
     /* Header */
@@ -45,7 +45,7 @@
       justify-content:space-between;
       align-items:center;
       gap:16px;
-      margin-bottom: 18px;
+      margin-bottom: 14px;
     }
 
     .brand{
@@ -83,6 +83,7 @@
 
     @media (max-width: 720px){
       .pill{ display:none; }
+      .wrap{ padding-top: 30px; }
     }
 
     /* Main card */
@@ -91,7 +92,7 @@
       border: 1px solid var(--stroke);
       background: linear-gradient(180deg, var(--card), rgba(255,255,255,0.06));
       box-shadow: var(--shadow);
-      padding: 22px;
+      padding: 18px;
       position: relative;
       overflow:hidden;
       backdrop-filter: blur(10px);
@@ -107,14 +108,14 @@
 
     h1{
       margin: 0 0 10px;
-      font-size: clamp(34px, 4.5vw, 54px);
-      line-height: 1.02;
+      font-size: clamp(30px, 6vw, 50px);
+      line-height: 1.05;
       letter-spacing: -0.9px;
     }
     .sub{
-      margin: 0 0 14px;
+      margin: 0 0 12px;
       color: var(--muted);
-      font-size: 18px;
+      font-size: 16px;
       max-width: 68ch;
     }
 
@@ -123,13 +124,13 @@
       flex-wrap: wrap;
       gap: 10px;
       align-items:center;
-      margin: 12px 0 6px;
+      margin: 10px 0 6px;
     }
 
     /* Slider */
     .slider{
       margin-top: 14px;
-      padding: 16px;
+      padding: 12px;
       border-radius: 18px;
       border: 1px solid rgba(255,255,255,0.12);
       background: rgba(255,255,255,0.04);
@@ -144,15 +145,15 @@
     }
     .sliderTitle{
       margin: 0;
-      font-size: 16px;
+      font-size: 15px;
       letter-spacing: -0.2px;
       color: rgba(255,255,255,0.88);
     }
     .sliderBtns{ display:flex; gap: 8px; }
 
     .iconBtn{
-      width: 40px;
-      height: 40px;
+      width: 38px;
+      height: 38px;
       border-radius: 14px;
       border: 1px solid rgba(255,255,255,0.18);
       background: rgba(255,255,255,0.08);
@@ -160,8 +161,6 @@
       font-size: 22px;
       cursor: pointer;
     }
-    .iconBtn:hover{ filter: brightness(1.08); }
-    .iconBtn:active{ transform: translateY(1px); }
 
     .viewport{
       border-radius: 18px;
@@ -179,17 +178,19 @@
     /* Each slide = screenshot + step text */
     .slide{
       min-width: 100%;
-      padding: 16px;
+      padding: 12px;
       display:grid;
       grid-template-columns: 0.95fr 1.05fr;
-      gap: 16px;
+      gap: 12px;
       align-items:center;
     }
 
+    /* Mobile: stack image and text, tighter spacing */
     @media (max-width: 840px){
       .slide{
         grid-template-columns: 1fr;
       }
+      .slider{ padding: 10px; }
     }
 
     .shot{
@@ -198,19 +199,27 @@
       align-items:center;
       padding: 6px;
     }
+
+    /* ✅ smaller images overall + extra small on mobile */
     .shot img{
-      width: min(320px, 78vw);
+      width: min(260px, 60vw);
       height: auto;
-      border-radius: 22px;
+      border-radius: 18px;
       box-shadow: 0 18px 50px rgba(0,0,0,0.45);
       border: 1px solid rgba(255,255,255,0.14);
       user-select: none;
       -webkit-user-drag: none;
     }
+    @media (max-width: 480px){
+      .shot img{
+        width: min(220px, 72vw);
+        border-radius: 16px;
+      }
+    }
 
     .stepCard{
-      padding: 14px;
-      border-radius: 18px;
+      padding: 12px;
+      border-radius: 16px;
       border: 1px solid rgba(255,255,255,0.12);
       background: rgba(255,255,255,0.06);
     }
@@ -224,8 +233,8 @@
       margin-bottom: 8px;
     }
     .num{
-      width: 28px;
-      height: 28px;
+      width: 26px;
+      height: 26px;
       border-radius: 999px;
       display:grid;
       place-items:center;
@@ -237,7 +246,7 @@
 
     .stepTitle{
       margin: 0 0 8px;
-      font-size: 18px;
+      font-size: 17px;
       letter-spacing: -0.2px;
     }
     .stepText{
@@ -352,7 +361,7 @@
     }
 
     footer{
-      margin-top: 16px;
+      margin-top: 14px;
       text-align:center;
       color: rgba(255,255,255,0.55);
       font-size: 13px;
@@ -395,7 +404,6 @@
       <div class="pill">Like Splitwise — but paid upfront</div>
     </div>
 
-    <!-- ONE CARD ONLY -->
     <section class="card" id="mainCard">
       <h1>Everyone pays first.<br/>Leftovers split back fairly.</h1>
 
@@ -409,7 +417,6 @@
         <div class="pill">Refunds done automatically</div>
       </div>
 
-      <!-- SLIDER (each slide includes a step) -->
       <section class="slider" id="sliderCard" aria-label="How Prepay works">
         <div class="sliderTop">
           <h2 class="sliderTitle">How it works</h2>
@@ -461,8 +468,6 @@
               </div>
             </div>
 
-            <!-- Optional 4th step without a new screenshot:
-                 Reuse one image or add screen4.PNG later -->
             <div class="slide">
               <div class="shot">
                 <img src="images/screen2.PNG" alt="Leftovers refunded screenshot" />
@@ -471,7 +476,7 @@
                 <div class="kicker"><span class="num">4</span> Step 4</div>
                 <h3 class="stepTitle">Leftovers refunded proportionally</h3>
                 <p class="stepText">
-                  When the trip/event is over, any remaining money is split back fairly based on how much each person contributed.
+                  When you’re done, any remaining money is split back fairly based on how much each person contributed.
                 </p>
               </div>
             </div>
@@ -482,7 +487,6 @@
         <div class="dots" id="dots" aria-label="Step navigation"></div>
       </section>
 
-      <!-- FORM -->
       <form class="form" id="waitlistForm" action="https://formspree.io/f/xeejoyrk" method="POST">
         <input type="hidden" name="source" value="Prepay landing page" />
 
@@ -535,7 +539,7 @@
     // Year
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    // Light-follow hover effect (for the one card)
+    // Light-follow hover effect
     const mainCard = document.getElementById("mainCard");
     mainCard.addEventListener("mousemove", (e) => {
       const r = mainCard.getBoundingClientRect();
@@ -579,15 +583,15 @@
     const sliderCard = document.getElementById("sliderCard");
     sliderCard.tabIndex = 0;
 
-    let autoplay = setInterval(() => goTo(index + 1), 4500);
+    let autoplay = setInterval(() => goTo(index + 1), 5200);
     sliderCard.addEventListener("mouseenter", () => clearInterval(autoplay));
-    sliderCard.addEventListener("mouseleave", () => autoplay = setInterval(() => goTo(index + 1), 4500));
+    sliderCard.addEventListener("mouseleave", () => autoplay = setInterval(() => goTo(index + 1), 5200));
     sliderCard.addEventListener("keydown", (e) => {
       if (e.key === "ArrowLeft") goTo(index - 1);
       if (e.key === "ArrowRight") goTo(index + 1);
     });
 
-    // Toast + Form (submit without leaving page)
+    // Toast + Form
     const form = document.getElementById("waitlistForm");
     const btn = document.getElementById("submitBtn");
     const toast = document.getElementById("toast");
