--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Prepay — paid upfront, split fairly</title>
+  <title>BudgetWise - Budget First, Spend Confidently</title>
 
   <style>
     :root{
@@ -399,22 +399,22 @@
     <div class="nav">
       <div class="brand">
         <div class="logo">P</div>
-        <div>Prepay</div>
+        <div>BudgetWise</div>
       </div>
-      <div class="pill">Like Splitwise — but paid upfront</div>
+      <div class="pill">Budget First, Spend Confidently</div>
     </div>
 
     <section class="card" id="mainCard">
-      <h1>Everyone pays first.<br/>Leftovers split back fairly.</h1>
+      <h1>No awkward chasing<br/>No overspending<br/>No messy leftovers</h1>
 
       <p class="sub">
-        Prepay is a group spending pot for trips, dinners, and shared bills.
+        BudgetWise is a group spending pot for trips, dinners, and shared bills.
         Everyone contributes upfront, you spend from the pot, and any remaining balance is refunded proportionally.
       </p>
 
       <div class="miniRow">
         <div class="pill">Waitlist is open — early access soon</div>
-        <div class="pill">Refunds done automatically</div>
+        <div class="pill">Refunds calculated automatically</div>
       </div>
 
       <section class="slider" id="sliderCard" aria-label="How Prepay works">
@@ -450,7 +450,7 @@
                 <div class="kicker"><span class="num">2</span> Step 2</div>
                 <h3 class="stepTitle">Everyone contributes upfront</h3>
                 <p class="stepText">
-                  Each person pays into the pot before spending begins. No chasing — everything is settled from the start.
+                  Each person pays into the pot before spending begins. No chasing - everything is settled from the start.
                 </p>
               </div>
             </div>
@@ -526,10 +526,10 @@
         </div>
 
         <button class="btn" id="submitBtn" type="submit">Join the waitlist</button>
-        <div class="note">No spam. Just launch updates. You can reply directly to submissions.</div>
+        <div class="note">No spam. Just launch updates.</div>
       </form>
 
-      <footer>© <span id="year"></span> Prepay. Built in public.</footer>
+      <footer>© <span id="year"></span> BudgetWise. Built in public.</footer>
     </section>
 
     <div class="toast" id="toast">Sending…</div>
