--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
             <div class="slide">
               <div class="shot">
-                <img src="images/screen1.PNG" alt="Create a pot screenshot" />
+                <img src="images/screen1x.PNG" alt="Create a pot screenshot" />
               </div>
               <div class="stepCard">
                 <div class="kicker"><span class="num">1</span> Step 1</div>
